# MemTierGDS

./: CMakeLists.txt  README.md
benchmarks/: bench_large_read.cpp  bench_reuse.cpp  bench_small_readv.cpp
examples/: async_pipeline.cpp  basic_read.cpp  cache_reuse.cpp  gpu_read_demo.cpp  load_chunks_demo.cpp  load_tensor_demo.cpp  path_policy_demo.cpp  prefetch_demo.cpp  prepare_experiment_files.cpp  python_dataset_demo.py  python_load_chunks.py  python_load_tensor.py  readv_small_io.cpp  runtime_info.cpp
include/memtier/: memtier.h  object_api.h  object_types.h  types.h
memtier_pytorch/: README.md  setup.py
memtier_pytorch/csrc/: memtier_ext.cpp  memtier_uvm.cu  memtier_uvm.h
memtier_pytorch/examples/: run_memtier_dataloader.py
memtier_pytorch/memtier/: __init__.py  benchmark.py  dataset.py
python/: setup.py
python/memtier/: __init__.py  _ctypes.py  chunks.py  dataset.py  tensor.py
scripts/: rebuild.sh
src/: api.cpp  cache_directory.cpp  cache_directory.h  context.cpp  context.h  cuda_backend.cpp  cuda_backend.h  cuda_backend_stub.cpp  dram_cache.cpp  file_prep.cpp  file_prep.h  gds_backend.cpp  gds_backend.h  gds_backend_stub.cpp  log.cpp  log.h  logger.cpp  memtier_internal.h  object_chunks.cpp  object_dataset.cpp  object_tensor.cpp  path_selector.cpp  path_selector.h  posix_backend.cpp  posix_backend.h  stats.cpp  stats.h
tests/: test_async.cpp  test_basic.cpp  test_cache.cpp  test_dataset.cpp  test_file_prep.cpp  test_gds_backend.cpp  test_gpu_read.cpp  test_object_chunks.cpp  test_object_tensor.cpp  test_path_selector.cpp  test_prefetch.cpp  test_python_dataset.py  test_python_tensor.py  test_readv.cpp  test_runtime.cpp
