cmake_minimum_required(VERSION 3.18)
project(MemTier VERSION 0.1.0 LANGUAGES C CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)

option(MEMTIER_ENABLE_CUDA "Enable CUDA backend" OFF)
option(MEMTIER_ENABLE_GDS "Enable GDS backend" OFF)
option(MEMTIER_STRICT_GDS "Fail configure if GDS requested but not found" OFF)
option(MEMTIER_BUILD_TESTS "Build tests" ON)
option(MEMTIER_BUILD_EXAMPLES "Build examples" ON)
option(MEMTIER_BUILD_BENCHMARKS "Build benchmarks" ON)

if(MEMTIER_ENABLE_CUDA)
  find_package(CUDAToolkit QUIET)
  if(NOT CUDAToolkit_FOUND)
    message(FATAL_ERROR "MEMTIER_ENABLE_CUDA=ON but CUDAToolkit was not found")
  endif()
endif()

set(MEMTIER_GDS_AVAILABLE OFF)
if(MEMTIER_ENABLE_GDS)
  find_path(CUFILE_INCLUDE_DIR cufile.h)
  find_library(CUFILE_LIBRARY cufile)
  if(CUFILE_INCLUDE_DIR AND CUFILE_LIBRARY)
    set(MEMTIER_GDS_AVAILABLE ON)
  elseif(MEMTIER_STRICT_GDS)
    message(FATAL_ERROR "MEMTIER_ENABLE_GDS=ON but cufile.h/libcufile not found")
  else()
    message(WARNING "GDS requested but not found, disabling")
  endif()
endif()

add_library(memtier STATIC
  src/api.cpp src/posix_backend.cpp src/logger.cpp src/cache_directory.cpp src/context.cpp src/path_selector.cpp src/gds_backend_stub.cpp
)

target_include_directories(memtier PUBLIC include)
target_link_libraries(memtier PUBLIC pthread)

if(MEMTIER_ENABLE_CUDA)
  target_sources(memtier PRIVATE src/cuda_backend.cpp)
  target_link_libraries(memtier PUBLIC CUDA::cudart)
  target_compile_definitions(memtier PUBLIC MEMTIER_HAS_CUDA=1)
else()
  target_sources(memtier PRIVATE src/cuda_backend_stub.cpp)
  target_compile_definitions(memtier PUBLIC MEMTIER_HAS_CUDA=0)
endif()

if(MEMTIER_GDS_AVAILABLE)
  target_compile_definitions(memtier PUBLIC MEMTIER_HAS_GDS=1)
else()
  target_compile_definitions(memtier PUBLIC MEMTIER_HAS_GDS=0)
endif()

if(MEMTIER_BUILD_EXAMPLES)
  foreach(ex basic_read cache_reuse path_policy_demo gpu_read_demo async_pipeline prefetch_demo)
    add_executable(${ex} examples/${ex}.cpp)
    target_link_libraries(${ex} PRIVATE memtier)
  endforeach()
endif()

if(MEMTIER_BUILD_TESTS)
  enable_testing()
  foreach(t test_basic test_cache test_path_selector test_gpu_read test_async test_prefetch)
    add_executable(${t} tests/${t}.cpp)
    target_link_libraries(${t} PRIVATE memtier)
    add_test(NAME ${t} COMMAND ${t})
  endforeach()
endif()

if(MEMTIER_BUILD_BENCHMARKS)
  add_executable(bench_stub benchmarks/bench_stub.cpp)
  target_link_libraries(bench_stub PRIVATE memtier)
endif()
